Eevee Specular Shader's Clear Coat does not function #63393

Closed
opened 2019-04-08 16:48:05 +02:00 by Alyx Wayland · 5 comments

System Information
Operating system: W10
Graphics card: Intel(R) UHD Graphics 600

Blender Version
Broken: 2.80, 75f551faca, master, 2019-04-07 15:02

Short description of error
The Specular shader that is exclusive to EEVEE has clear coat as a part of its node. However, this clear coat does not function. Setting it to 1 does not provide any difference when compared to when it does not have clear coat set to 1. This is in direct contrast to the Principled BSDF, which has a functioning clear coat.

Reproducing the error
Use the file that was attached if you need to see more, or just view the video file I have attached to this post as well. It uses LookDev to use an environment map.
The cube on the left has the specular shader plugged in, with nothing else in the node graph other than a value to show consistency. The cube to the right uses the principled bsdf shader with nothing else in the node graph but a value, just like the other. They both use the same setup: Completely black base color, specular value set to 0, roughness set to 0.2, clear coat roughness set to 0, and clear coat intensity set to 1. The cube on the left, with the specular shader, has no reflection despite the fact that it has clear coat set to 1. On the other hand, the cube to the right that uses principled bsdf has a reflection from the clear coat.
SpecularBugReport.blend
2019-04-08_10-42-49.mp4

**System Information** Operating system: W10 Graphics card: Intel(R) UHD Graphics 600 **Blender Version** Broken: 2.80, 75f551facaf0, master, 2019-04-07 15:02 **Short description of error** The Specular shader that is exclusive to EEVEE has clear coat as a part of its node. However, this clear coat does not function. Setting it to 1 does not provide any difference when compared to when it does not have clear coat set to 1. This is in direct contrast to the Principled BSDF, which has a functioning clear coat. **Reproducing the error** Use the file that was attached if you need to see more, or just view the video file I have attached to this post as well. It uses LookDev to use an environment map. The cube on the left has the specular shader plugged in, with nothing else in the node graph other than a value to show consistency. The cube to the right uses the principled bsdf shader with nothing else in the node graph but a value, just like the other. They both use the same setup: Completely black base color, specular value set to 0, roughness set to 0.2, clear coat roughness set to 0, and clear coat intensity set to 1. The cube on the left, with the specular shader, has no reflection despite the fact that it has clear coat set to 1. On the other hand, the cube to the right that uses principled bsdf has a reflection from the clear coat. [SpecularBugReport.blend](https://archive.blender.org/developer/F6919231/SpecularBugReport.blend) [2019-04-08_10-42-49.mp4](https://archive.blender.org/developer/F6919236/2019-04-08_10-42-49.mp4)
Author

Added subscriber: @Purrspctiv

Added subscriber: @Purrspctiv

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-04-09 19:02:54 +02:00

The issue here is that the clear coat won't work if the specular color is zero (pitch black) however the doc states that clear coat should add a completely white specular layer on top:
https://docs.blender.org/manual/en/dev/render/eevee/materials/nodes/specular_bsdf.html

The issue here is that the clear coat won't work if the specular color is zero (pitch black) however the doc states that clear coat should add a completely white specular layer on top: https://docs.blender.org/manual/en/dev/render/eevee/materials/nodes/specular_bsdf.html

This issue was referenced by 2445d5abc2

This issue was referenced by 2445d5abc269123cb0789cc16a5710c6577e9d20

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63393
No description provided.