Fix T63393 Eevee: Specular Shader's Clear Coat does not function